@@ -33,7 +33,7 @@
 function retval = get (udp, property)
 
   properties = {'name', 'remoteport', 'remotehost', ...
-                'localport', 'type', ...
+                'localport', 'localhost', 'type', ...
                 'status', 'timeout', 'bytesavailable'};
 
   if (nargin == 1)
